# mablo-quinielas

./: .gitignore  README.md  implementation_plan.md  invitacion-quiniela.html  login_resp.json  test_get.py  test_join.py
Backend/: .env.example  .gitignore  gunicorn.conf.py  main.py  migrate_password_reset.py  patch_db.py  pyproject.toml  start_prod.sh
Backend/app/: __init__.py  extensions.py  mailer.py  models.py  scheduler.py  scraper.py
Backend/app/routes/: admin.py  auth.py  predicciones.py  quinielas.py
DB/: docker-compose.yml  init_db.sql  seed.py  seed_test.sql
DB/.data/base/1/: 2619
DB/.data/base/16384/: 1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  (+100 more)
DB/.data/global/: 1260  1262  2671  2676  pg_control
DB/.data/pg_stat/: pgstat.stat
Scraping/: README.md  liga_mx_bot.py  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-04-17-quiniela-mejoras-comodines-ui.md
docs/superpowers/specs/: 2026-04-17-quiniela-mejoras-comodines-ui.md
quiniela-app/: index.html  package-lock.json  package.json  vite.config.js
quiniela-app/src/: App.jsx  index.css
quiniela-app/src/components/: Cards.jsx  Forms.jsx  Navbar.jsx  PrediccionesView.jsx  index.jsx
quiniela-app/src/data/: partidosReales.json
quiniela-app/src/pages/: DashboardPage.jsx  EmptyStatePage.jsx  ForgotPasswordPage.jsx  InvitacionPage.jsx  LoginPage.jsx  MisQuinielasPage.jsx  PerfilPage.jsx  RegisterPage.jsx  TablaPage.jsx
quiniela-app/src/services/: apiClient.js  authService.js  quinielaService.js
quiniela-app/src/store/: index.js
quiniela-app/src/utils/: imageUtils.js
(+8 files in other folders)
